# hippo

./: .gitignore  Cargo.toml  Main.java  README.adoc
crates/gc/src/: address.rs  allocator_local.rs  block.rs  global_definition.rs  mem.rs  oop.rs  oop_desc.rs  space.rs  tlab.rs
examples/: test_dump.rs
main/: Main.java
old_src/runtime/: code_reader.rs  cp_cache.rs  field.rs  heap.rs  jvm_env.rs  jvm_thread.rs  mod.rs  native.rs
old_src/runtime/class/: instance_class.rs  mod.rs
old_src/runtime/instruction/: mod.rs
src/: class_parser.rs  class_path.rs  code_reader.rs  debug.rs  java_const.rs  jenv.rs  jni.rs  jthread.rs  jvm.rs  lib.rs  main.rs  native.rs  nom_utils.rs  operand.rs  string_table.rs
src/class/: array_class.rs  instance_class.rs  instance_class_loader_class.rs  instance_mirror_class.rs  mod.rs
src/class/class/: cp_cache.rs  field.rs  method.rs  mod.rs
src/class/inner_class/: cp_cache.rs  field.rs  method.rs  mod.rs
src/class_loader/: bootstrap_class_loader.rs  class_path.rs  mod.rs
src/class_parser/: attribute_info.rs  constant_pool.rs  descriptor.rs  field_info.rs  method_info.rs  mod.rs
src/frame/: local_variable_array.rs  mod.rs  operand_stack.rs
src/gc/: address.rs  allocator_local.rs  block.rs  global_definition.rs  mark_word.rs  mem.rs  mod.rs  oop.rs  oop_desc.rs  space.rs  tlab.rs
src/gc/os/: mem.rs
src/instruction/: mod.rs  opcode.rs
src/runtime/: class.rs  class_loader.rs  code_reader.rs  cp_cache.rs  field.rs  heap.rs  interface.rs  jvm_env.rs  jvm_thread.rs  method.rs  mod.rs  native.rs  opcode.rs
src/snapshots/: tests__parse_class_file.snap
test_data/: MyObject.java
(+22 files in other folders)
