[package]
name = "hippo"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
nom = "5"
cesu8 = "1.1.0"
enum-methods = "0.0.8"
zip = "0.5.4"
tracing = { version = "0.1" }
tracing-subscriber = "0.2"

[dev-dependencies]
insta = "0.12.0"
