[package]
name = "hippo"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
nom = "5"
cesu8 = "1.1"
enum-methods = "0.0.8"
zip = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
lazy_static = "1.4"
derivative = "2.1"

[dev-dependencies]
insta = "0.12"
