[package]
name = "hippo"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.5.0"
color-eyre = "0.4"
nom = "5.1.1"
cesu8 = "1.1.0"
enum-methods = "0.0.8"
zip = "0.5.5"
tracing = "0.1.15"
tracing-subscriber = "0.2.5"
tracing-appender = "0.1.0"
lazy_static = "1.4.0"
once_cell = "1.4.0"
derivative = "2.1.1"
libc = "0.2.71"
parking_lot = { version = "0.10.2", features = ["deadlock_detection"]}
field-offset = "0.3.1"
downcast-rs = "1.1.1"
crossbeam = "0.7.3"
thread-id = "3.3.0"
pretty = "0.10.0"

[dev-dependencies]
insta = "0.16.0"
